--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.39.0",
     "@tanstack/react-query-devtools": "^5.40.0",
+    "axios": "^1.7.2",
     "cross-env": "^7.0.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
